corrected header spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,5 @@
+/*universal code*/
+
 body{
   background-color: black;
   color: seashell;
@@ -6,6 +8,10 @@ body{
   opacity: 0.9;
 }
 
+nav span {
+  display: inline-block;
+  padding: 20px 10px;
+}
 /*Header*/
 
 header {
@@ -21,6 +27,10 @@ header {
 
 header a{
   color: seashell;
+}
+
+header nav{
+  padding-right:
 }
 .logo {
   display: flex;
